--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,70 @@
-.App {
+
+.App-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.page {
   text-align: center;
+  background: lightsteelblue;
+  border: 2px solid black;
+  box-shadow: 10px 10px;
+  margin: 20px;
+  border-radius: 20px;
+  width: 360px;
+  height: 700px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-container {
+  margin: 20px;
+  font-size: large;
+  font-weight: 700;
+  text-shadow: gray 1px 1px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+.header-instructions {
+  font-size: smaller;
+  display: block;
+  font-weight: 500;
+  text-shadow: none;
 }
 
-.App-header {
-  min-height: 100vh;
+.converter-container {
+  margin: 0px 20px 20px;
+  border-radius: 20px;
+  background-color: rgb(186, 207, 235);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+.baseLabel {
+  display: block;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.convertedLabel {
+  display: block;
 }
+
+#baseCurrency {
+  width: 100px;
+  text-align:center;
+  height:15px;
+}
+
+#convertedCurrency {
+  width: 100px;
+  text-align:center;
+  height:15px;
+}
+
+.baseCurrenciesSelector {
+  height: 20px;
+}
+
+.convertedCurrencySelector {
+  height:20px;
+}
+
+
+
